--- a/TCN/config.json
+++ b/TCN/config.json
@@ -1,4 +1,215 @@
 {
+    "All": {
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/TCN/All/All_TRANSFORM_velocity_MPbaseline.pkl",
+        "gesture_class_num": 6,
+        "input_size": 14,
+        "locs": [
+            "PSML_position_x",
+            "PSML_position_y",
+            "PSML_position_z",
+            "PSML_velocity_x",
+            "PSML_velocity_y",
+            "PSML_velocity_z",
+            "PSML_gripper_angle",
+            "PSMR_position_x",
+            "PSMR_position_y",
+            "PSMR_position_z",
+            "PSMR_velocity_x",
+            "PSMR_velocity_y",
+            "PSMR_velocity_z",
+            "PSMR_gripper_angle"
+        ],
+        "raw_feature_dir": [
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Peg_Transfer/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Suturing/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Needle_Passing/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Knot_Tying/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Pea_on_a_Peg/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Post_and_Sleeve/preprocessed"
+        ],
+        "sample_rate": 1,
+        "tcn_params": {
+            "config": {
+                "batch_size": 1,
+                "epoch": 60,
+                "learning_rate": 5e-05,
+                "weight_decay": 0.0005
+            },
+            "model_params": {
+                "class_num": 6,
+                "decoder_params": {
+                    "input_size": 128,
+                    "kernel_size": 29,
+                    "layer_sizes": [
+                        96,
+                        64,
+                        64
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel",
+                    "transposed_conv": true
+                },
+                "encoder_params": {
+                    "input_size": 14,
+                    "kernel_size": 29,
+                    "layer_sizes": [
+                        64,
+                        96,
+                        128
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel"
+                },
+                "fc_size": 32,
+                "mid_lstm_params": {
+                    "hidden_size": 64,
+                    "input_size": 128,
+                    "layer_num": 1
+                }
+            }
+        },
+        "test_trial": [
+            "Suturing_S02",
+            "Suturing_S03",
+            "Suturing_S04",
+            "Suturing_S05",
+            "Suturing_S06",
+            "Suturing_S07",
+            "Suturing_S08",
+            "Suturing_S09",
+            "Needle_Passing_S02",
+            "Needle_Passing_S03",
+            "Needle_Passing_S04",
+            "Needle_Passing_S05",
+            "Needle_Passing_S06",
+            "Needle_Passing_S08",
+            "Needle_Passing_S09",
+            "Knot_Tying_S02",
+            "Knot_Tying_S03",
+            "Knot_Tying_S04",
+            "Knot_Tying_S05",
+            "Knot_Tying_S06",
+            "Knot_Tying_S07",
+            "Knot_Tying_S08",
+            "Knot_Tying_S09",
+            "Peg_Transfer_S01",
+            "Peg_Transfer_S02",
+            "Peg_Transfer_S03",
+            "Peg_Transfer_S04",
+            "Peg_Transfer_S05",
+            "Peg_Transfer_S06",
+            "Peg_Transfer_S07",
+            "Peg_Transfer_S08",
+            "Post_and_Sleeve_S01",
+            "Post_and_Sleeve_S02",
+            "Post_and_Sleeve_S03",
+            "Post_and_Sleeve_S04",
+            "Post_and_Sleeve_S05",
+            "Post_and_Sleeve_S06",
+            "Post_and_Sleeve_S07",
+            "Post_and_Sleeve_S08",
+            "Post_and_Sleeve_S09",
+            "Post_and_Sleeve_S10",
+            "Post_and_Sleeve_S11",
+            "Post_and_Sleeve_S12",
+            "Pea_on_a_Peg_S01",
+            "Pea_on_a_Peg_S02",
+            "Pea_on_a_Peg_S03",
+            "Pea_on_a_Peg_S04",
+            "Pea_on_a_Peg_S05",
+            "Pea_on_a_Peg_S06",
+            "Pea_on_a_Peg_S07",
+            "Pea_on_a_Peg_S08",
+            "Pea_on_a_Peg_S09",
+            "Pea_on_a_Peg_S10",
+            "Pea_on_a_Peg_S11",
+            "Pea_on_a_Peg_S12"
+        ],
+        "train_trial": [
+            [
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8
+            ]
+        ],
+        "validation_trial": 2,
+        "validation_trial_train": [
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ]
+    },
     "All-5a": {
         "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/TCN/All-5a/All-5a_TRANSFORM_velocity_MP.pkl",
         "gesture_class_num": 6,
@@ -216,165 +427,6 @@
                 "encoder_params": {
                     "input_size": 14,
                     "kernel_size": 23,
-                    "layer_sizes": [
-                        64,
-                        96,
-                        128
-                    ],
-                    "layer_type": "TempConv",
-                    "norm_type": "Channel"
-                },
-                "fc_size": 32,
-                "mid_lstm_params": {
-                    "hidden_size": 64,
-                    "input_size": 128,
-                    "layer_num": 1
-                }
-            }
-        },
-        "test_trial": [
-            1,
-            2,
-            3,
-            4,
-            5,
-            6,
-            7,
-            8
-        ],
-        "train_trial": [
-            [
-                2,
-                3,
-                4,
-                5,
-                6,
-                7,
-                8
-            ],
-            [
-                1,
-                3,
-                4,
-                5,
-                6,
-                7,
-                8
-            ],
-            [
-                1,
-                2,
-                4,
-                5,
-                6,
-                7,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                5,
-                6,
-                7,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                6,
-                7,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                5,
-                7,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                5,
-                6,
-                8
-            ],
-            [
-                1,
-                2,
-                3,
-                4,
-                5,
-                6,
-                7
-            ]
-        ],
-        "validation_trial": 1,
-        "validation_trial_train": [
-            2,
-            3,
-            4,
-            5,
-            6,
-            7,
-            8
-        ]
-    },
-    "PT": {
-        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/TCN/PT/PT_TRANSFORM_velocity_MPright.pkl",
-        "gesture_class_num": 5,
-        "input_size": 14,
-        "locs": [
-            "PSML_position_x",
-            "PSML_position_y",
-            "PSML_position_z",
-            "PSML_velocity_x",
-            "PSML_velocity_y",
-            "PSML_velocity_z",
-            "PSML_gripper_angle",
-            "PSMR_position_x",
-            "PSMR_position_y",
-            "PSMR_position_z",
-            "PSMR_velocity_x",
-            "PSMR_velocity_y",
-            "PSMR_velocity_z",
-            "PSMR_gripper_angle"
-        ],
-        "raw_feature_dir": [
-            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Peg_Transfer/preprocessed"
-        ],
-        "sample_rate": 1,
-        "tcn_params": {
-            "config": {
-                "batch_size": 1,
-                "epoch": 60,
-                "learning_rate": 5e-05,
-                "weight_decay": 0.0005
-            },
-            "model_params": {
-                "class_num": 5,
-                "decoder_params": {
-                    "input_size": 128,
-                    "kernel_size": 43,
-                    "layer_sizes": [
-                        96,
-                        64,
-                        64
-                    ],
-                    "layer_type": "TempConv",
-                    "norm_type": "Channel",
-                    "transposed_conv": true
-                },
-                "encoder_params": {
-                    "input_size": 14,
-                    "kernel_size": 43,
                     "layer_sizes": [
                         64,
                         96,
@@ -966,6 +1018,165 @@
             7,
             8,
             9
+        ]
+    },
+    "PT": {
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/TCN/PT/PT_TRANSFORM_velocity_MPright.pkl",
+        "gesture_class_num": 5,
+        "input_size": 14,
+        "locs": [
+            "PSML_position_x",
+            "PSML_position_y",
+            "PSML_position_z",
+            "PSML_velocity_x",
+            "PSML_velocity_y",
+            "PSML_velocity_z",
+            "PSML_gripper_angle",
+            "PSMR_position_x",
+            "PSMR_position_y",
+            "PSMR_position_z",
+            "PSMR_velocity_x",
+            "PSMR_velocity_y",
+            "PSMR_velocity_z",
+            "PSMR_gripper_angle"
+        ],
+        "raw_feature_dir": [
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Peg_Transfer/preprocessed"
+        ],
+        "sample_rate": 1,
+        "tcn_params": {
+            "config": {
+                "batch_size": 1,
+                "epoch": 60,
+                "learning_rate": 5e-05,
+                "weight_decay": 0.0005
+            },
+            "model_params": {
+                "class_num": 5,
+                "decoder_params": {
+                    "input_size": 128,
+                    "kernel_size": 43,
+                    "layer_sizes": [
+                        96,
+                        64,
+                        64
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel",
+                    "transposed_conv": true
+                },
+                "encoder_params": {
+                    "input_size": 14,
+                    "kernel_size": 43,
+                    "layer_sizes": [
+                        64,
+                        96,
+                        128
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel"
+                },
+                "fc_size": 32,
+                "mid_lstm_params": {
+                    "hidden_size": 64,
+                    "input_size": 128,
+                    "layer_num": 1
+                }
+            }
+        },
+        "test_trial": [
+            1,
+            2,
+            3,
+            4,
+            5,
+            6,
+            7,
+            8
+        ],
+        "train_trial": [
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                4,
+                5,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                5,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                6,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                7,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                8
+            ],
+            [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7
+            ]
+        ],
+        "validation_trial": 1,
+        "validation_trial_train": [
+            2,
+            3,
+            4,
+            5,
+            6,
+            7,
+            8
         ]
     },
     "PTPaS": {
@@ -1597,6 +1808,182 @@
             12
         ]
     },
+    "ROSMA": {
+        "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/TCN/ROSMA/ROSMA_TRANSFORM_velocity_MPbaseline.pkl",
+        "gesture_class_num": 6,
+        "input_size": 14,
+        "locs": [
+            "PSML_position_x",
+            "PSML_position_y",
+            "PSML_position_z",
+            "PSML_velocity_x",
+            "PSML_velocity_y",
+            "PSML_velocity_z",
+            "PSML_gripper_angle",
+            "PSMR_position_x",
+            "PSMR_position_y",
+            "PSMR_position_z",
+            "PSMR_velocity_x",
+            "PSMR_velocity_y",
+            "PSMR_velocity_z",
+            "PSMR_gripper_angle"
+        ],
+        "raw_feature_dir": [
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Pea_on_a_Peg/preprocessed",
+            "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/Datasets/dV/Post_and_Sleeve/preprocessed"
+        ],
+        "sample_rate": 1,
+        "tcn_params": {
+            "config": {
+                "batch_size": 1,
+                "epoch": 60,
+                "learning_rate": 5e-05,
+                "weight_decay": 0.0005
+            },
+            "model_params": {
+                "class_num": 6,
+                "decoder_params": {
+                    "input_size": 128,
+                    "kernel_size": 19,
+                    "layer_sizes": [
+                        96,
+                        64,
+                        64
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel",
+                    "transposed_conv": true
+                },
+                "encoder_params": {
+                    "input_size": 14,
+                    "kernel_size": 19,
+                    "layer_sizes": [
+                        64,
+                        96,
+                        128
+                    ],
+                    "layer_type": "TempConv",
+                    "norm_type": "Channel"
+                },
+                "fc_size": 32,
+                "mid_lstm_params": {
+                    "hidden_size": 64,
+                    "input_size": 128,
+                    "layer_num": 1
+                }
+            }
+        },
+        "test_trial": [
+            "Post_and_Sleeve_S01",
+            "Post_and_Sleeve_S02",
+            "Post_and_Sleeve_S03",
+            "Post_and_Sleeve_S04",
+            "Post_and_Sleeve_S05",
+            "Post_and_Sleeve_S06",
+            "Post_and_Sleeve_S07",
+            "Post_and_Sleeve_S08",
+            "Post_and_Sleeve_S09",
+            "Post_and_Sleeve_S10",
+            "Post_and_Sleeve_S11",
+            "Post_and_Sleeve_S12",
+            "Pea_on_a_Peg_S01",
+            "Pea_on_a_Peg_S02",
+            "Pea_on_a_Peg_S03",
+            "Pea_on_a_Peg_S04",
+            "Pea_on_a_Peg_S05",
+            "Pea_on_a_Peg_S06",
+            "Pea_on_a_Peg_S07",
+            "Pea_on_a_Peg_S08",
+            "Pea_on_a_Peg_S09",
+            "Pea_on_a_Peg_S10",
+            "Pea_on_a_Peg_S11",
+            "Pea_on_a_Peg_S12"
+        ],
+        "train_trial": [
+            [
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                5,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                6,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                7,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                8,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                9
+            ],
+            [
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8
+            ]
+        ],
+        "validation_trial": 2,
+        "validation_trial_train": [
+            3,
+            4,
+            5,
+            6,
+            7,
+            8,
+            9
+        ]
+    },
     "S": {
         "data_transform_path": "/home/student/Documents/Research/MICCAI_2022/COMPASS-kinvis/TCN/S/S_TRANSFORM_velocity_MPright.pkl",
         "gesture_class_num": 7,
@@ -1925,7 +2312,7 @@
             9
         ]
     },
-    "dataset_name": "PTPaS",
+    "dataset_name": "All",
     "experiment_setup": {
         "sample_rate": 1,
         "val_type": "LOUO"
